--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,6 +21,13 @@ body {
   -webkit-filter: blur(7px);
 }
 
+.black {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,.4);
+}
+
 main {
   position: absolute;
   margin: 12% 40%;
